Remove un-needed junit dependency & licenses.
Signed-off-by: Finn Carroll <carrofin@amazon.com>